advanced/logs/88x2bu-opensuse-leap.txt
DKMS make.log for rtl88x2bu-5.8.7.4.37264.20200922 for kernel 5.3.18-55-default (x86_64)
Tue 20 Apr 2021 08:08:45 AM EEST
make ARCH=x86_64 CROSS_COMPILE= -C /lib/modules/5.3.18-55-default/build M=/var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build  modules
make[1]: Entering directory '/usr/src/linux-5.3.18-55-obj/x86_64/default'
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_cmd.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_security.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_debug.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_io.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_ioctl_query.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_ioctl_set.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_ieee80211.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_mlme.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_mlme_ext.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_mi.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_wlan_util.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_vht.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_pwrctrl.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_rf.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_chplan.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_recv.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_sta_mgt.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_ap.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/mesh/rtw_mesh.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/mesh/rtw_mesh_pathtbl.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/mesh/rtw_mesh_hwmp.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_xmit.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_p2p.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_rson.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_tdls.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_br_ext.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_iol.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_sreset.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_btcoex_wifionly.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_btcoex.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_beamforming.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_odm.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_rm.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_rm_fsm.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/rtw_rm_util.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/core/efuse/rtw_efuse.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/osdep_service.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/os_intfs.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/usb_intf.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/usb_ops_linux.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/ioctl_linux.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/xmit_linux.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/mlme_linux.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/recv_linux.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/ioctl_cfg80211.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/rtw_cfgvendor.o
  CC [M]  /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/wifi_regd.o
/var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/ioctl_cfg80211.c:10258:3: error: ‘struct cfg80211_ops’ has no member named ‘mgmt_frame_register’
  .mgmt_frame_register = cfg80211_rtw_mgmt_frame_register,
   ^~~~~~~~~~~~~~~~~~~
/var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/ioctl_cfg80211.c:10258:25: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
  .mgmt_frame_register = cfg80211_rtw_mgmt_frame_register,
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/ioctl_cfg80211.c:10258:25: note: (near initialization for ‘rtw_cfg80211_ops.mgmt_tx_cancel_wait’)
/var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/ioctl_cfg80211.c:4324:20: warning: ‘nl80211_tx_power_setting_str’ defined but not used [-Wunused-function]
 static const char *nl80211_tx_power_setting_str(int type)
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[3]: *** [/usr/src/linux-5.3.18-55/scripts/Makefile.build:288: /var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build/os_dep/linux/ioctl_cfg80211.o] Error 1
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [/usr/src/linux-5.3.18-55/Makefile:1670: _module_/var/lib/dkms/rtl88x2bu/5.8.7.4.37264.20200922/build] Error 2
make[1]: *** [../../../linux-5.3.18-55/Makefile:179: sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-5.3.18-55-obj/x86_64/default'
make: *** [Makefile:2373: modules] Error 2
